<resources>
  <string name="app_name">Hillfort Finder</string>
  <string name="button_addHillfort">Add Hillfort</string>
  <string name="hint_hillfortTitle">Hillfort Title</string>
  <string name="hint_hillfortDescription">Hillfort Description</string>
  <string name="menu_addHillfort">Add</string>
  <string name="menu_cancelHillfort">Cancel</string>
  <string name="menu_deleteHillfort">Delete</string>
  <string name="enter_hillfort_title">Please Enter A Hillfort Title</string>
  <string name="save_hillfort">Save Hillfort</string>
  <string name="button_addImage">Add Image</string>
  <string name="select_hillfort_image">Select Hillfort Image</string>
  <string name="change_hillfort_image">Change Hillort Image</string>
  <string name="button_location">Set Location</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="button_login">Login</string>
  <string name="button_signup">Signup</string>
  <string name="menu_signup">Signup</string>
  <string name="button_settins">Update</string>
  <string name="menu_settings">Settings</string>
  <string name="chk_visited">Visited</string>
  <string name="chk_favourited">Favourited</string>
  <string name="menu_logout">Logout</string>
  <string name="hillfort_total">Total number of hillforts:</string>
  <string name="hillfort_total_visited">Total number of hillforts visited:</string>
  <string name="hint_additional_notes">Additional Notes</string>
  <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
  <string name="hillfort_image_placeholder">Hillfort Image</string>
  <string name="hillfort_title_placeholder">Hillfort Title</string>
  <string name="hillfort_description_placeholder">Hillfort Description</string>
  <string name="menu_saveHillfort">Save</string>
  <string name="title_activity_hillfort_list">Hillforts</string>
  <string name="title_activity_hillfort">Hillfort</string>
  <string name="title_activity_edit_location">Hillfort</string>
  <string name="title_activity_login">Login</string>
  <string name="title_activity_map">Map</string>
  <string name="title_activity_settins">Settings</string>
  <string name="title_activity_signup">Signup</string>
  <string name="menu_all">All</string>
  <string name="menu_favourites">Favourites</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
